fixed gradient at the bottom and some spacing

--- a/src/styles/components/contactForm.scss
+++ b/src/styles/components/contactForm.scss
@@ -5,7 +5,7 @@
 .ContactForm {
   width: 100%;
   max-width: $bp--500;
-  padding: $spacing--500;
+  padding: $spacing--1500 $spacing--500;
   margin: auto;
   text-align: center;
   input {
