--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,7 +14,7 @@
     position: relative;
     width: 100vw;
     max-width: 100%;
-    background: linear-gradient(to bottom, $color--secondary 75%, $color--tertiary);
+    background: linear-gradient(to bottom, $color--secondary 80%, $color--tertiary);
     z-index: 2;
   }
 }
